--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -91,9 +91,9 @@ DOCTYPE html>
         <div class="item separator"></div>
 
         <div class="item">
-          <a href="#ShSec2">
+          <a href="#ShSec2" id='Btn#2'>
             <div class="icon">
-              <img src="resources/Assets/matters.png" alt="">
+              <img src="resources/Assets/matters/(3).png" alt="Materias">
             </div>
             <div class="title">
               <span>Materias</span>
@@ -104,7 +104,7 @@ DOCTYPE html>
         <div class="item separator"></div>
 
         <div class="item">
-          <a href="">
+          <a href="" id="Btn#3">
             <div class="icon">
               <img src="resources/Assets/matters.png" alt="">
             </div>
@@ -289,9 +289,69 @@ DOCTYPE html>
     </section>
 
     <section id="ShSec2" class="ShSec2">
-      <h5>Uwu</h5>
+      <div class="matters">
+        <!- Botones Materias ->
+        <a href="#" class="btn-neon1">
+            <span id="span1"></span>
+            <span id="span2"></span>
+            <span id="span3"></span>
+            <span id="span4"></span>
+            Formacion en Amb de Trabajo
+        </a>
+        <a href="#" class="btn-neon2">
+            <span id="spam1"></span>
+            <span id="spam2"></span>
+            <span id="spam3"></span>
+            <span id="spam4"></span>
+            Ingles
+        </a>
+        <a href="#" class="btn-neon3">
+            <span id="spaq1"></span>
+            <span id="spaq2"></span>
+            <span id="spaq3"></span>
+            <span id="spaq4"></span>
+            Marco Juridico de las Act Industriales
+        </a>
+        <a href="#" class="btn-neon4">
+            <span id="spaw1"></span>
+            <span id="spaw2"></span>
+            <span id="spaw3"></span>
+            <span id="spaw4"></span>
+            Laboratorio de Informatica
+        </a>
+        <a href="#" class="btn-neon5">
+            <span id="spae1"></span>
+            <span id="spae2"></span>
+            <span id="spae3"></span>
+            <span id="spae4"></span>
+            Base de Datos
+        </a>
+        <a href="#" class="btn-neon6">
+            <span id="spar1"></span>
+            <span id="spar2"></span>
+            <span id="spar3"></span>
+            <span id="spar4"></span>
+            Aplicacion a las Nuevas Tecnologias
+        </a>
+        <a href="#" class="btn-neon7">
+            <span id="spat1"></span>
+            <span id="spat2"></span>
+            <span id="spat3"></span>
+            <span id="spat4"></span>
+            Higiene y Seguridad Laboral
+        </a>
+        <a href="#" class="btn-neon8">
+            <span id="spay1"></span>
+            <span id="spay2"></span>
+            <span id="spay3"></span>
+            <span id="spay4"></span>
+            Emprendimientos
+        </a>
+      </div>
     </section>
-    <section id="ShSec3" class="ShSec3"></section>
+    <section id="ShSec3" class="ShSec3">
+      <div class="l"></div>
+    </section>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js">
     
