--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -78,7 +78,7 @@ DOCTYPE html>
       <!- ITEMS ->
       <div id="menu-items">
         <div class="item">
-          <a href="#ShSec1" id="Btn#1">
+          <a href="#ShSec1" id="Btn1">
             <div class="icon first-icon">
               <img src="resources/Assets/matters.png" alt="Materias">
             </div>
@@ -91,7 +91,7 @@ DOCTYPE html>
         <div class="item separator"></div>
 
         <div class="item">
-          <a href="#ShSec2" id='Btn#2'>
+          <a href="#ShSec2" id='Btn2'>
             <div class="icon">
               <img src="resources/Assets/matters/(3).png" alt="Materias">
             </div>
@@ -104,7 +104,7 @@ DOCTYPE html>
         <div class="item separator"></div>
 
         <div class="item">
-          <a href="" id="Btn#3">
+          <a href="" id="Btn3">
             <div class="icon">
               <img src="resources/Assets/matters.png" alt="">
             </div>
