--- a/views/Home_v3.html
+++ b/views/Home_v3.html
@@ -7,6 +7,9 @@
     <title>Home</title>
     <link rel="stylesheet" href="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\css\styleV3.css">
     <link rel="shortcut icon" href="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\Assets\GG-logo.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,10 +21,11 @@
         </nav>
         <section class="textos-header">
             <h1>Bienvenid@ a nuestra pagina</h1>
+            <h2>Estamos para brindarte nuestros servicios</h2>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;" >
             <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-                <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path>
+                <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #ffffff;"></path>
             </svg>
         </div>
     </header>
@@ -41,16 +45,54 @@
             </div>
         </section>
         <section class="Novedades">
-            <h2 class="titulo">Novedades</h2>
-            <div class="galeria-Nov">
-                <img src="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\Assets\Home-Calendario.jpg" alt="">
-                <div class="hover">
-                    <img src="#" alt="">
-                    <p>Sistema de Calendario</p>
+            <div class="contenedor">
+                <h2 class="titulo">Novedades</h2>
+                <div class="galeria-nov">
+                    <div class="imagen-nov">
+                        <img src="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\Assets\Home-Calendario.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\Assets\ayrton.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-nov">
+                        <img src="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\Assets\Home-Calendario.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\Assets\ayrton.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
+                    <div class="imagen-nov">
+                        <img src="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\Assets\Home-Calendario.jpg" alt="">
+                        <div class="hover-galeria">
+                            <img src="C:\Users\Facundo Nieto\Documents\GitHub\Pagina-Web_Gary-Goodsped\public\Assets\ayrton.png" alt="">
+                            <p>Nuestro trabajo</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
-    
+    <footer>
+        <div class="contenedor-footer">
+            <div class="content-foo">
+                <h4>Phone</h4>
+                <p>23544354346</p>
+            </div>
+        </div>
+        <div class="contenedor-footer">
+            <div class="content-foo">
+                <h4>Email</h4>
+                <p>23544354346</p>
+            </div>
+        </div>
+        <div class="contenedor-footer">
+            <div class="content-foo">
+                <h4>Location</h4>
+                <p>23544354346</p>
+            </div>
+        </div>
+        <h2 class="titulo-final">&copy; Nieto Facundo | Miotti Ayrton</h2>
+    </footer>
 </body>
 </html>
