--- a/views/admin_landing.ejs
+++ b/views/admin_landing.ejs
@@ -11,11 +11,11 @@
     <div class="container">
       <div class="split left">
         <h1 id="text-btn">Estudiantes</h1>
-        <a href="#" class="btn-select">Seleccionar</a>
+        <a href="Admin%Students" class="btn-select btn-student">Seleccionar</a>
       </div>
       <div class="split right">
         <h1 id="text-btn">Profesores</h1>
-        <a href="#" class="btn-select">Seleccionar</a>
+        <a href="Admin%Teachers" class="btn-select btn-teacher">Seleccionar</a>
       </div>
     </div>
     <script src="resources/Js/Admin/main.js"></script>
