--- a/views/login.ejs
+++ b/views/login.ejs
@@ -62,9 +62,9 @@
       </div>
     </main>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="resources/particles.js"></script>
-    <script src="resources/index_login.js"></script>
-    <script src="resources/validar.js"></script>
+    <script src="resources/Js/particles.js"></script>
+    <script src="resources/Js/index_login.js"></script>
+    <script src="resources/Js/validar.js"></script>
 
     <% if(typeof alert != "undefined") { %>
       <script>
